# rust-memory-check

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
src/core/: analysis.rs  cfg.rs  check.rs  mod.rs  pfg.rs  utils.rs
src/scripts/: bug_kind_statistic.py  calc_res.py  cc.py  cf.py  simple_test.py  test_correct.py
