[package]
name = "rust-memory-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-mc"

[[bin]]
name = "mc"

[dependencies]
log = "0.4.8"
log4rs = "0.10.0"
serde_json = "1.0.61"
cargo_metadata = "0.9.0"

[package.metadata.rust-analyzer]
rustc_private = true
